--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,6 @@ body {
 
 header {
   text-align: center;
-  color: rgb(30, 32, 197);
   font-family: "Amatic SC", cursive;
 }
 
@@ -14,13 +13,18 @@ h1 {
   font-size: 3.5em;
 }
 
+h2{
+ margin-bottom: 50px;
+ color: rgb(255, 71, 71);
+}
+
 input {
-  border: 5px solid tomato;
+  border: 5px solid rgb(224, 66, 38);
   border-top: none;
   border-left: none;
   border-right: none;
   font-size: 2em;
-  color: tomato;
+  color: rgb(255, 71, 71);
   width: 100%;
 }
 
@@ -87,7 +91,10 @@ input {
   float: left;
 }
 
-button {
+#button-a,
+#button-b,
+#button-c,
+#button-d {
   height: 50px;
   width: 50px;
   margin: 5px;
@@ -99,13 +106,29 @@ button {
   color: #fdfdfd;
   cursor: pointer;
 }
+#play{
+ 
+  height: 60px;
+  width: 60px;
+  margin-right: 80px;
+  font-size: 2em;
+  background-color: #fdfdfd;
+  border: none;
+  cursor: pointer;
+}
+
+#scores{
+  width: 70px;
+  background-color: rgb(109, 37, 204);
+  color: #fdfdfd;
+}
 
 .input-group {
   margin-top: 20px;
   float: left;
-  width: 20%;
+  width: 15%;
   padding: 10px;
-  display: none;
+  
 }
 
 .inputs::after {
@@ -127,3 +150,6 @@ button {
 #results, #question-section{
   display: none;
 }
+
+
+
